rgw: handle errors properly during GET on Swift's DLO.

Backport: Jewel, Hammer
Fixes: http://tracker.ceph.com/issues/15812
Signed-off-by: Radoslaw Zarzynski <rzarzynski@mirantis.com>